[package]
name = "rlisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.0"
dialoguer = "0.9.0"
colored = "2.0.0"
regex = "1.5.4"
lazy_static = "1.4.0"

[profile.release]
lto = "thin"